--- a/1.html
+++ b/1.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        if([] == false) {
-            alert(1)
-        }
+        // if([] == false) {
+        //     alert(1)
+        // }
 
-        if({} == false) {
-            alert(2)
-        }
+        // if({} == false) {
+        //     alert(2)
+        // }
     </script>
 </head>
 <body>
-    
+    <h2>刘琦</h2>
 </body>
 </html>
